--- a/index.html
+++ b/index.html
@@ -279,12 +279,19 @@
     }
 
     .gallery-grid img {
-      width: 100%;
-      height: 220px;
-      object-fit: cover;
-      border-radius: 16px;
-      border: 1px solid #222;
-    }
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  border-radius: 18px;
+  border: 2px solid #222;
+  box-shadow: 0 0 18px rgba(0,0,0,0.7);
+  transition: 0.2s;
+}
+
+.gallery-grid img:hover {
+  transform: scale(1.03);
+  border-color: rgba(255,106,0,0.7);
+}
 
     iframe {
       width: 100%;
